# battleshipsOnline

./: .gitignore  README.md  docker-compose.yaml  flow.txt
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  game_manager.rs  games.rs  main.rs  matchmaker.rs  utils.rs
front/: Dockerfile  package.json
front/src/app/: page.tsx
front/src/app/board/: layout.tsx  page.tsx
front/src/app/game/: layout.tsx
front/src/app/game/[id]/: page.tsx
front/src/app/game/board/: page.tsx
front/src/app/profile/: layout.tsx  page.tsx
front/src/components/: AuthContext.tsx  CornerUser.tsx  Login.tsx  PlayerGrid.tsx  SetUpBoard.tsx  SocketContext.tsx
